<resources>
    <string name="app_name">image</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="select_start">선택을 시작하겠습니까?</string>
    <string name="start">시작함</string>
    <string name="like_animal">좋아하는 애완동물은?</string>
    <string name="dog">강아지</string>
    <string name="cat">고양이</string>
    <string name="rabbit">토끼</string>
    <string name="select_finish">선택완료</string>

    <string name="like_android">좋아하는 안드로이드 버전은?</string>
    <string name="jellybean">젤리빈(4.3)</string>
    <string name="kitkat">킷캣(4.4)</string>
    <string name="lollipop">롤리팝(5.0)</string>
    <string name="exit">종료</string>
    <string name="forthefirsttime">처음으로</string>
</resources>
