<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/select_start" />

    <Switch
        android:id="@+id/switch_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/start" />

    <TextView
        android:id="@+id/textView_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/like_android"
        android:visibility="invisible" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/radioButton_jellybean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/jellybean" />

        <RadioButton
            android:id="@+id/radioButton_kitkat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/kitkat" />

        <RadioButton
            android:id="@+id/radioButton_lollipop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/lollipop" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView_pet"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="4dp"
        android:scaleType="centerCrop"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/exit"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_forthefirsttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/forthefirsttime"
        android:visibility="invisible" />


</LinearLayout>
